bk_ida/gccida/g1/process_reg_param
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_reg_param/src/integrate.c:1058:26: error: use of undeclared identifier 'machine_mode'
v4 = copy_to_mode_reg( ( machine_mode)*( ( unsigned __int8 *)loc + 2), copy); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_reg_param/src/integrate.c:1076:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)v3->fld[0]; 
                       ^~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_reg_param/src/obj/integrate.o] Error 1
